Create assignment package, make code compile with Java 8 and create jpf file